--- a/templates/home.html
+++ b/templates/home.html
@@ -151,67 +151,67 @@
                             <label>Tipo de trabajo:</label>
                             <div class="job-type-buttons">
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="1"
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="1" id="Pendón"
                                         onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Pendón
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="2"
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="2" id="Vinilo"
                                         onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Vinilo
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="3"
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="3" id="Estructura"
                                         onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Estructura
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="4"
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="4" id="Valla Publicitaria"
                                         onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Valla Publicitaria
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="5"
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="5" id="Presentación"
                                         onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Presentación
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="6"
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="6" id="Volantes"
                                         onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Volantes
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="7"
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="7" id="Banderin"
                                         onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Banderín
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="8"
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="8" id="Camisa"
                                         onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Camisa
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="9"
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="9" id="NeoFlex"
                                         onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     NeoFlex
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="10"
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="10" id="Corte V"
                                         onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Corte V
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="11"
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="11" id="Acrilico"
                                         onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Acrílico
