--- a/templates/home.html
+++ b/templates/home.html
@@ -323,6 +323,7 @@
 
     <script src="../static/js/home.js"></script>
     <script src="../static/js/sidebar.js"></script>
+    <script src="../static/js/card-color.js"></script>
 </body>
 
 </html>
