--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,7 +9,7 @@
 
 :root {
     /* ===== Colors ===== */
-    --body-color: #E4E9F7;
+    --body-color: #dce0ee;
     --sidebar-color: #FFF;
     --primary-color: #695CFE;
     --primary-color-light: #F6F5FF;
@@ -74,9 +74,9 @@ body {
 
 body.dark {
     --body-color: #121212;
-    --sidebar-color: #282828;
+    --sidebar-color: #1e1f20;
     --primary-color: #3a3b3c;
-    --primary-color-light: #3a3b3c;
+    --primary-color-light: #2c2d30;
     --toggle-color: #fff;
     --text-color: #ccc;
 }
@@ -539,7 +539,7 @@ body.dark .card-list .card-item:hover {
 
 /* Dark Mode Styles */
 body.dark .card-list .card-item {
-    background: #282828;
+    background: #232425;
     color: #fff;
 }
 
@@ -987,13 +987,13 @@ body.dark .custom-checkbox {
 
 /* Modo oscuro */
 body.dark .form-section {
-    background: #1c1c1c; /* Fondo más oscuro para la sección del formulario */
+    background: #232425; /* Fondo más oscuro para la sección del formulario */
     border: none; /* Eliminar bordes */
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4); /* Sombra más pronunciada */
 }
 body.dark .form-group input,
 body.dark .form-group textarea {
-    background-color: #272727; /* Fondo oscuro para el input */
+    background-color: #343536; /* Fondo oscuro para el input */
     color: #E0E0E0; /* Texto claro */
     border: 1px solid transparent; /* Sin bordes visibles al principio */
     border-radius: 5px; /* Bordes redondeados */
@@ -1088,7 +1088,7 @@ body.dark .form-group textarea:focus {
 }
 
 body.dark .preview-card-item {
-    background: #282828;
+    background: #232425;
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.041);
