Borrado de basura

--- a/templates/home.html
+++ b/templates/home.html
@@ -291,7 +291,7 @@
                         <span class="card-name">{{ item[3] }}</span>
                     </p>
                     <p class="card-info">
-                        <span class="job-title">Designer</span>
+                        <span class="job-title">{{ item2 }}</span>
                         <span class="date">{{ item[1] }}</span>
                         <span class="phone"><i class="fas fa-phone"></i>{{ item[4] }}</span>
                     </p>
