--- a/templates/home.html
+++ b/templates/home.html
@@ -47,8 +47,7 @@
                         </a>
                     </li>
                 </ul>
-                <!-- Agrupación de Diseño, Aprobación, Elaboración y Entrega -->
-                <hr class="separator"> <!-- Este div agrega espacio y parece separado -->
+                <hr class="separator">
                 <ul class="menu-links">
                     <li class="nav-link" id="diseño">
                         <a href="{{ url_for('design') }}">
@@ -82,6 +81,7 @@
                         <i class='bx bx-cog icon'></i>
                         <span class="text nav-text">Ajustes</span>
                     </a>
+                </li>
                 <li class="">
                     <a href="{{ url_for('logout') }}">
                         <i class='bx bx-log-out icon'></i>
@@ -106,12 +106,14 @@
             <div class="text">Inicio</div>
             <button class="add-btn" type="button">
                 <span class="button__text">Añadir</span>
-                <span class="button__icon"><svg class="svg" fill="none" height="24" stroke="currentColor"
-                        stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24"
+                <span class="button__icon">
+                    <svg class="svg" fill="none" height="24" stroke="currentColor" stroke-linecap="round"
+                        stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24"
                         xmlns="http://www.w3.org/2000/svg">
                         <line x1="12" x2="12" y1="5" y2="19"></line>
                         <line x1="5" x2="19" y1="12" y2="12"></line>
-                    </svg></span>
+                    </svg>
+                </span>
             </button>
         </div>
         <div class="add-modal hidden">
@@ -127,20 +129,41 @@
                             <label for="title">Título:</label>
                             <input type="text" id="title" name="title" required>
                         </div>
-                        <div class="form-row">
+                        <!-- Selector para el usuario existente o agregar nuevo -->
+                        <div class="form-group">
+                            <label for="user-option">Tipo de cliente:</label>
+                            <select id="user-option" name="user-option" onchange="handleUserOptionChange()">
+                                <option value="">Seleccione una opción</option>
+                                <option value="existing">Cliente existente</option>
+                                <option value="new">Nuevo cliente</option>
+                            </select>
+                        </div>
+
+                        <!-- Selector para el usuario existente -->
+                        <div class="form-group" id="existing-user-select" style="display: none;">
+                            <label for="existing-users">Seleccionar cliente existente:</label>
+                            <select id="existing-users" name="existing-users" onchange="autocompleteUser()">
+                                <option value="">Seleccione un cliente</option>
+                                <option value="1" data-name="Juan" data-surname="Pérez" data-phone="123456789">Juan
+                                    Pérez</option>
+                                <option value="2" data-name="María" data-surname="Gómez" data-phone="987654321">María
+                                    Gómez</option>
+                            </select>
+                        </div>
+                        <div class="form-row" id="userFields">
                             <div class="form-group">
                                 <label for="name">Nombre:</label>
-                                <input type="text" id="name" name="name" required>
+                                <input type="text" id="name" name="name" required disabled>
                             </div>
                             <div class="form-group">
                                 <label for="surname">Apellido:</label>
-                                <input type="text" id="surname" name="surname" required>
+                                <input type="text" id="surname" name="surname" required disabled>
                             </div>
                         </div>
-                        <div class="form-row">
+                        <div class="form-row" id="telField">
                             <div class="form-group">
                                 <label for="phone">Teléfono:</label>
-                                <input type="tel" id="phone" name="phone" value="" required>
+                                <input type="tel" id="phone" name="phone" value="" required disabled>
                             </div>
                             <div class="form-group">
                                 <label for="date">Fecha:</label>
@@ -169,14 +192,14 @@
                                     Estructura
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="4" id="Valla Publicitaria"
-                                        onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="4"
+                                        id="Valla Publicitaria" onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Valla Publicitaria
                                 </label>
                                 <label class="job-type-btn">
-                                    <input type="checkbox" name="job-type" autocomplete="off" value="5" id="Presentación"
-                                        onchange="updatePreview()">
+                                    <input type="checkbox" name="job-type" autocomplete="off" value="5"
+                                        id="Presentación" onchange="updatePreview()">
                                     <span class="custom-checkbox"></span>
                                     Presentación
                                 </label>
@@ -239,8 +262,7 @@
                                 <input type="number" id="remaining" name="remaining" required readonly>
                             </div>
                         </div>
-                        
-                        
+
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="description">Comentarios:</label>
@@ -307,11 +329,11 @@
                     <div class="job-types-wrapper">
                         <div class="job-types-container" id="jobTypesContainer">
                             {% for t in item2 %}
-                                <span class="types job-type-{{ t | lower | replace(' ', '-') }}">{{ t }}</span>
+                            <span class="types job-type-{{ t | lower | replace(' ', '-') }}">{{ t }}</span>
                             {% endfor %}
                         </div>
                     </div>
-                    </p>              
+                    </p>
                     <div class="actions">
                         <div class="arrow">
                             <i class="fas fa-arrow-right card-icon" title="Abrir"></i>
@@ -325,8 +347,8 @@
             </div>
             {% endfor %}
 
-            </div>
-            <div class="confirmation-modal hidden" id="confirmationModal">
+        </div>
+        <div class="confirmation-modal hidden" id="confirmationModal">
             <div class="modal-content">
                 <h3>¿Estás seguro de que deseas eliminar?</h3>
                 <p>Esta acción no se puede deshacer.</p>
@@ -335,11 +357,14 @@
                     <button id="cancelDelete" class="cancel-btn">Cancelar</button>
                 </div>
             </div>
+        </div>
     </section>
 
     <script src="../static/js/home.js"></script>
     <script src="../static/js/sidebar.js"></script>
     <script src="../static/js/card-color.js"></script>
+    <script>
+    </script>
 </body>
 
 </html>
